begin proposal work

--- a/proposal/proposal.rmd
+++ b/proposal/proposal.rmd
@@ -3,7 +3,10 @@
 author: |
   | William Findlay
 title: |
-  | Honors Thesis Ideas
+  | Honors Thesis Project Pre-Proposal
+subtitle: |
+  | Implementing Process Homeostasis Using
+  | Enhanced Berkeley Packet Filtering
 date: \today
 bibliography: /home/housedhorse/.bibs/uni.bib
 csl: /home/housedhorse/.bibs/ieee.csl
@@ -22,6 +25,7 @@ header-includes: |
 
   \allowdisplaybreaks
 
+  \usepackage[bottom]{footmisc}
   % fancy headers/footers
   \makeatletter
   \usepackage{fancyhdr}
@@ -32,6 +36,7 @@ header-includes: |
   \cfoot{\thepage}
   \rfoot{}
   \renewcommand{\headrulewidth}{0.4pt}
+  \makeatother
 
   \usepackage{amsmath, amsfonts,amssymb, amsthm}
   \usepackage{siunitx}
@@ -46,7 +51,7 @@ header-includes: |
   \floatplacement{table}{!htbp}
   \lstset{numbers=left,breaklines=true,frame=single,language=Python,captionpos=t,abovecaptionskip={\abovecaptionskip},
   belowcaptionskip={0.5em},aboveskip=\intextsep,showstringspaces=false,identifierstyle=\color{Blue},
-  commentstyle={\color{OliveGreen}},keywordstyle={\bfseries\color{Orange}}}
+  commentstyle={\color{OliveGreen}},keywordstyle={\bfseries\color{Orange}},stringstyle=\color{Purple},mathescape=true}
   \setlength{\captionmargin}{1in}
 
   \newgeometry{margin=1in}
@@ -132,9 +137,9 @@ header-includes: |
   \newcommand*\circled[1]{\tikz[baseline=(char.base)]{
               \node[shape=circle,draw,inner sep=2pt] (char) {#1};}}
 
-  \renewcommand{\labelitemi}{\large$\bullet$}
+  \renewcommand{\labelitemi}{$\bullet$}
   \renewcommand{\labelitemii}{\ding{226}}
-  \renewcommand{\labelitemiii}{\tiny$\blacksquare$}
+  \renewcommand{\labelitemiii}{\small$\blacksquare$}
   \renewcommand{\labelitemiv}{\small$\triangleright$}
 
   \titleformat{\paragraph} % command to change
@@ -184,7 +189,28 @@ header-includes: |
   \usepackage{threeparttablex}
   \usepackage[normalem]{ulem}
   \usepackage{makecell}
-  \pagestyle{fancy}
+
+  \renewcommand{\sectionautorefname}{Section}
+  \renewcommand{\subsectionautorefname}{Subection}
+  \renewcommand{\subsubsectionautorefname}{Subection}
+  \renewcommand{\paragraphautorefname}{}
+  \renewcommand{\subparagraphautorefname}{}
+
+  \usepackage{nameref}
+
+  \makeatletter
+  \renewcommand{\theparagraph}{\bfseries \@currentlabelname}
+  \renewcommand{\thesubparagraph}{\itshape \@currentlabelname}
+  \makeatother
+
+  \usepackage{enumitem}
+  \setitemize{itemsep=0em}
+
+  \usepackage[final]{pdfpages}
+  \usepackage{lipsum}
+
+  \let\oldmaketitle\maketitle
+  \renewcommand{\maketitle}{\relax}
   ```
 output:
   pdf_document:
@@ -197,66 +223,35 @@ output:
 knitr::opts_chunk$set(echo = FALSE)
 options(kableExtra.latex.load_packages = FALSE)
 library(kableExtra)
-library(dplyr)
 ```
-\thispagestyle{empty}
+\pagestyle{fancy}
+\thispagestyle{plain}
 \counterwithin{lstlisting}{section}
+\includepdf{cover-page-filled.pdf}
+\renewcommand{\maketitle}{\oldmaketitle}
+\setcounter{page}{1}
+\maketitle
 
-- priorities
-  1. Linux-related?
-  1. security-related?
-  1. a few interesting ideas
-- what do I love right now?
-  - \LaTeX
-  - Vim
-  - GNU/Linux
-  - terminals, CLIs
-  - tiling window managers
-- what am I interested in learning more about?
-  - Linux kernel development
-  - computer security
-    - Linux kernel security?
-  - machine learning
+# Overview of Thesis
 
-```{r}
-ideas = c()
-descriptions = c()
-bullet = "{\\tiny$\\bullet$}\\hspace{.8em}"
-rebullet = "{\\\\tiny$\\\\bullet$}\\\\hspace{.8em}"
+\lipsum[1]
 
-addIdea = function(idea="",desc="")
-{
-  ideas <<- c(ideas,idea)
-  addDescription(desc)
-}
+## Motivation
 
-addDescription = function(desc)
-{
-  desc = paste(bullet, desc, sep="")
-  desc = gsub("; ",paste("\n",rebullet,sep=""),x=desc)
-  desc = gsub(";",paste("\n",rebullet,sep=""),x=desc)
-  descriptions <<- c(descriptions,desc)
-}
+\lipsum[2-3]
 
-data = NULL
+## Main Objectives
 
-addIdea("","")
-addIdea("","")
-addIdea("Collaborative vim","")
-addIdea("vish","A configurable POSIX-compliant UNIX shell inspired by my love for Vim; Vimkey bindings for all basic text editing features and oft-used commands; All key bindings are fully customizable; Macros to build shell scripts and execute them on the fly; Unsure about some implementation details like using a Vim buffer etc.")
-addIdea("Requirements Analysis Document Generator","Some kind of generator for requirements analysis documents; Inspired in part by my own custom document generation for 3004; Probably a Qt based GUI; Helps users input and categorize FR and NFR; Tailored diagram drawing for UML diagrams; Possibility for automatic generation of diagram layout (this could be a project in and of itself); Puts everything together in PDF format by generating \\LaTeX{} code and passing it to pandoc.")
+\lipsum[4-6]
 
-#feedback = vector(mode="character", length=length(ideas))
-feedback = rep("\n\n\n\n\n",times=length(ideas))
-data = data.frame(ideas,descriptions,feedback)
-names(data) = c("\\normalfont{\\bfseries Idea}","Description","Feedback")
+## Equipment Requirements
 
-data %>%
-  mutate_all(linebreak) %>%
-  kable(align=c('r','l','l'), format="latex", escape=F, caption="Some project ideas sorted (-ish) by most to least interesting/relevant.", longtable=T) %>%
-  row_spec(0,bold=T) %>%
-  column_spec(1,italic=T,width="12em") %>%
-  column_spec(2,width="15em") %>%
-  column_spec(3,width="15em") %>%
-  kable_styling(latex_options=c("repeat_header"))
-```
+\lipsum[9]
+
+## Expected Deliverables
+
+\lipsum[10-12]
+
+# Bi-Weekly Schedule for First Term (Fall 2019)
+
+\lipsum[13-14]
